<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>fertilizer</groupId>
	<artifactId>fertilizerapp</artifactId>
	<version>1.0.1</version>
	<name>FertilizerApp</name>
	<description>App to optimize component selection for customizing field
		fertilizer mixes.</description>
	<packaging>jar</packaging>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.release>17</maven.compiler.release>
		<javafx.version>18.0.2</javafx.version>

		<javafx.maven.plugin.version>0.0.8</javafx.maven.plugin.version>
		<gluonfx.maven.plugin.version>1.0.22</gluonfx.maven.plugin.version>
		<main.class>stamfordcoop/fertilizer.MainApp</main.class>
		<app.identifier>fertilizerapp</app.identifier>
		<app.description>App to optimize component selection for customizing
			field fertilizer mixes.</app.description>
		<package.type />
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>${javafx.version}</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>${javafx.version}</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.testfx/testfx-junit5 -->
		<dependency>
			<groupId>org.testfx</groupId>
			<artifactId>testfx-junit5</artifactId>
			<version>4.0.18</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>5.7.0</version>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-math4-legacy-core</artifactId>
			<version>4.0-beta1</version>
		</dependency>

		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.10.1</version>
		</dependency>


		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-math4-legacy</artifactId>
			<version>4.0-beta1</version>
		</dependency>

	</dependencies>

	<repositories>
		<repository>
			<id>Gluon</id>
			<url>https://nexus.gluonhq.com/nexus/content/repositories/releases</url>
		</repository>
		<repository>
			<id>snapshot</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>snapshot</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
		</pluginRepository>
	</pluginRepositories>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<argLine>
						--add-exports
						javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
						--add-opens
						javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
					</argLine>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-maven-plugin</artifactId>
				<version>${javafx.maven.plugin.version}</version>
				<configuration>
					<mainClass>${main.class}</mainClass>
				</configuration>
			</plugin>

			<plugin>
				<groupId>com.gluonhq</groupId>
				<artifactId>gluonfx-maven-plugin</artifactId>
				<version>${gluonfx.maven.plugin.version}</version>
				<configuration>
					<verbose>false</verbose>
					<target>${gluonfx.target}</target>
					<attachList>
					</attachList>
					<runtimeArgs>-Dglass.accessible.force=false</runtimeArgs>
					<mainClass>${main.class}</mainClass>

					<appIdentifier>${app.identifier}</appIdentifier>

				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.3.1</version>
				<executions>
					<execution>
						<id>copy-resources</id>
						<!-- here the phase you need -->
						<phase>compile</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>target/gluonfx/x86_64-windows</outputDirectory>
							<resources>
								<resource>
									<directory>${basedir}</directory>
									<filtering>true</filtering>
									<includes>
										<include>*.csv</include>
									</includes>
								</resource>
							</resources>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.2.5</version>
				<configuration>> <forkCount>1</forkCount>
            <reuseForks>false</reuseForks>
                  <includes>
						<include>*Test.java</include>
					</includes>
          <argLine>--add-exports
					javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
					--add-opens
					javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>desktop</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<properties>
				<gluonfx.target>host</gluonfx.target>
			</properties>
		</profile>
	</profiles>
</project>